# tesla-static-analysis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  install_manifest.txt  lit.site.cfg
demos/: Makefile  cmake_install.cmake
demos/smoketest/: GNUmakefile  core  example.c  release.demo  run.demo
demos/thintesla/smoketest/: example.c  main.c  support.c  tesla.mk
include/: Makefile  cmake_install.cmake  config.h  libtesla.h  tesla-macros.h
include/fsm/: edge.h  fsm.h  state.h
libtesla/: CMakeLists.txt  Makefile  cmake_install.cmake
libtesla/c_thintesla/: CMakeLists.txt  KernelThreadAutomaton.c  KernelThreadAutomaton.h  MurmurHash3.h  TeslaAllocator.c  TeslaAllocator.h  TeslaAssert.c  TeslaAssert.h  TeslaHash.c  TeslaHash.h  TeslaHashTable.c  TeslaHashTable.h  TeslaHistory.c  TeslaHistory.h  TeslaLogic.c  TeslaLogic.h  TeslaLogicLinearHistory.c  TeslaLogicPerThread.c  TeslaMacros.h  TeslaMalloc.c  TeslaMalloc.h  TeslaMallocStatic.c  TeslaState.c  TeslaState.h  TeslaStore.c  TeslaStore.h  TeslaTypes.h  TeslaUtils.c  TeslaUtils.h  TeslaVector.c  TeslaVector.h  ThinTesla.h
libtesla/src/: CMakeLists.txt  Makefile  cmake_install.cmake  tesla_update.c
libtesla/src/thintesla/: TeslaAssertion.h  TeslaAssertionBuilder.h  ThinTesla.h
libtesla/test/: CMakeLists.txt  Makefile  actions.cpp.test  allocator.cpp  cmake_install.cmake  hashtable.cpp  lookup.cpp.test  match.cpp.test  repeat.cpp.test  store.c.test  thintesla_logic.cpp  update.cpp.test
libtesla/thintesla/: CMakeLists.txt  TeslaAllocator.cpp  TeslaAllocator.h  TeslaAssertion.h  TeslaAssertionBuilder.cpp  TeslaDataStore.h  TeslaHash.h  TeslaHashTable.cpp  TeslaHashTable.h  TeslaInstrument.cpp  TeslaInstrument.h  TeslaTreeStore.h  TeslaUtils.cpp  TeslaUtils.h  ThinTesla.h
scripts/: CMakeLists.txt  Makefile  cmake_install.cmake  tesla
static-optimization/: CMakeLists.txt  InstrumentPass.cpp
tesla/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  tesla-get-triple
tesla/analyser/: AST.cpp  AST.h  CMakeLists.txt  CMakeLists.txt~  Makefile  Tool.cpp  cmake_install.cmake
tesla/analyser/old/: AST.cpp  Visitor.cpp
tesla/common/: Arguments.cpp  Automaton.cpp  Automaton.h  Makefile  Manifest.cpp  cmake_install.cmake  tesla.pb.cc  tesla.pb.h  tesla.proto
tesla/instrumenter/: Assertion.cpp  CMakeLists.txt  Callee.cpp  CheckResult.cpp  FieldReference.cpp  InstrContext.cpp  InstrContext.h  InstrumentPass.cpp  Instrumentation.cpp  Makefile  ModelChecker.cpp  Remove.cpp  ThinTeslaAssertion.cpp  ThinTeslaAssertion.h  ThinTeslaInstrumenter.cpp  ThinTeslaInstrumenter.h  ThinTeslaTypes.cpp  ThinTeslaTypes.h  TranslationFn.cpp  cmake_install.cmake
tesla/instrumenter/static-optimization/: CMakeLists.txt  StaticOptimizer.cpp
tesla/test/: Makefile  cmake_install.cmake
tesla/tools/: CMakeLists.txt  Makefile  cmake_install.cmake
tesla/tools/archive/: CMakeLists.txt  Makefile  cmake_install.cmake
tesla/tools/cat/: CMakeLists.txt  Makefile  cat.cpp  cmake_install.cmake
tesla/tools/extract/: CMakeLists.txt  Makefile  cmake_install.cmake
tesla/tools/get-triple/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
tesla/tools/prepare/: AutomatonParser.h  CMakeLists.txt  CacheFile.cpp  CacheFile.h  CompilationDatabase.h  DataStructures.h  PrepareAST.cpp  PrepareAST.h  PrepareParser.cpp  PrepareParser.h  PrepareStructures.h  PrepareTool.cpp  PrepareVisitor.cpp  PrepareVisitor.h  Utils.cpp  Utils.h
tesla/tools/print/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
